# SampleExactArithmetic

./: .travis.yml
headers/: integer.h
src/: CMakeLists.txt  gcd.cpp  integer.cpp  rational-cmdline.cpp  rational.cpp
test/: CMakeLists.txt  integer.cpp  rational.cpp  rational_add.cpp  rational_divide.cpp  rational_multiply.cpp  rational_subtract.cpp
